--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,21 @@ addons:
     - liblapack-dev
     - gfortran
 before_install:
-  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    fi
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
-  - conda update --yes conda
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  # Useful for debugging any issues with conda
+  - conda info -a
 install:
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION pip numpy scipy
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip numpy scipy
+  - source activate test-environment
   - pip install biom-format
 
 script:
